# Algorithm_visualization

./: .gitignore  CMakeLists.txt  README.md
include/algos/: closest_pair_3d.hpp  polygon_fill.hpp  rect_union_3d.hpp  segments_intersections.hpp  skyline.hpp  types.hpp
src/: closest_pair_3d.cpp  main.cpp  polygon_fill.cpp  rect_union_3d.cpp  segments_intersections.cpp  skyline.cpp
tests/: README.md  sample_inputs.txt
web/: index.html
web/assets/: app.js  app_new.js  style.css
